# BasicImageProcessing

./: CMakeLists.txt  README.md  log.txt  main.cpp
cuda/: blur.cu  brightness.cu  saturation.cu  sharpness.cu  ycrcb.cu
kernel/: blur.cl  brightness.cl  saturation.cl  sharpness.cl  ycrcb.cl
parallelprocess/: Blur.cpp  BrightNess.cpp  RGBtoYCrCB.cpp  Saturation.cpp  Sharpness.cpp  readfile.cpp  readfile.hpp
process/: Blur.cpp  BrightNess.cpp  RGBtoYCrCB.cpp  Saturation.cpp  Sharpness.cpp
testscene/: checktest.cpp  fulltest.cpp  invidualtest.cpp
